--- a/examples/dockmanager/elasticsite/MakeSite.lpi
+++ b/examples/dockmanager/elasticsite/MakeSite.lpi
@@ -62,7 +62,11 @@
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)\"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
+      <LCLWidgetType Value="win32"/>
     </SearchPaths>
+    <CodeGeneration>
+      <TargetOS Value="win32"/>
+    </CodeGeneration>
     <Other>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
